# trekker

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
src/: main.rs  sql.rs  template.rs
test/sql_files/: 01-create-user.sql
