[package]
name = "trekker"
version = "0.1.0"
authors = ["caiges <caigesn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.8.3"
postgres = "0.19.0"
seahorse = "1.1"
glob = "0.3.0"
