[package]
name = "trekker"
description = "A command line tool to help you manage your PostgreSQL database migrations and seeds."
version = "0.2.2"
authors = ["caiges <caigesn@gmail.com>"]
edition = "2018"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.0"
postgres = "0.19.7"
seahorse = "2.1.0"
glob = "0.3.1"
